--- a/Visual Studio/2D RPG Negiramen/Resources/Styles/Styles.xaml
+++ b/Visual Studio/2D RPG Negiramen/Resources/Styles/Styles.xaml
@@ -47,6 +47,12 @@
                             <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray600}}" />
                         </VisualState.Setters>
                     </VisualState>
+                    <VisualState x:Name="PointerOver">
+                        <VisualState.Setters>
+                            <Setter Property="TextColor" Value="{StaticResource GentleWhite}" />
+                            <Setter Property="BackgroundColor" Value="DodgerBlue" />
+                        </VisualState.Setters>
+                    </VisualState>
                 </VisualStateGroup>
             </VisualStateGroupList>
         </Setter>
