--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -56,58 +56,62 @@
     </Shell.TitleView>
 
     <Grid RowDefinitions="*,64">
-        <Grid Grid.Row="0"
+        <ScrollView>
+            <Grid Grid.Row="0"
               RowDefinitions="20,48,20,48" ColumnDefinitions="1*,1*,2*"
               Padding="8,8,8,8">
 
-            <!--    １行目
-                ======
-        -->
-            <Label Grid.Row="0" Grid.Column="0"
-               Text="サークル名"/>
-            <Label Grid.Row="0" Grid.Column="1"
-               Text="作品名"/>
-            <Label Grid.Row="0" Grid.Column="2"
-               Text="リストから選ぶ"/>
+                <!--    １行目
+                        ======
+                -->
+                <Label Grid.Row="0" Grid.Column="0"
+                       Text="サークル名"/>
+                <Label Grid.Row="0" Grid.Column="1"
+                       Text="作品名"/>
+                <Label Grid.Row="0" Grid.Column="2"
+                       Text="リストから選ぶ"/>
 
-            <!--    ２行目
-                ======
-        -->
-            <Entry Grid.Row="1" Grid.Column="0"
-               Placeholder="Doujin Circle Grayscale"
-               Text=""/>
-            <Entry Grid.Row="1" Grid.Column="1"
-               Placeholder="Negiramen Quest"
-               Text=""/>
-            <Picker  Grid.Row="1" Grid.Column="2"
-                     VerticalOptions="Center"
-                     HorizontalOptions="StartAndExpand"
-                     WidthRequest="300"/>
+                <!--    ２行目
+                        ======
+                -->
+                <Entry Grid.Row="1" Grid.Column="0"
+                       Placeholder="Doujin Circle Grayscale"
+                       Text=""
+                       TextChanged="YourCircleNameEntry_TextChanged"/>
+                <Entry Grid.Row="1" Grid.Column="1"
+                       Placeholder="Negiramen Quest"
+                       Text=""
+                       TextChanged="YourWorkNameEntry_TextChanged"/>
+                <Picker Grid.Row="1" Grid.Column="2"
+                        VerticalOptions="Center"
+                        HorizontalOptions="StartAndExpand"
+                        WidthRequest="300"/>
 
-            <!--    ３行目
-                ======
-        -->
-            <Label Grid.Row="2" Grid.Column="0"
+                <!--    ３行目
+                        ======
+                -->
+                <Label Grid.Row="2" Grid.Column="0"
                Text="文字数"/>
-            <Label Grid.Row="2" Grid.Column="1"
-               Text="推奨する文字"/>
+                <Label Grid.Row="2" Grid.Column="1"
+               Text="推奨する使用文字"/>
 
-            <!--    ４行目
-                ======
-        -->
-            <Label Grid.Row="3" Grid.Column="0"
-               Text="999"
-               FontSize="24"/>
-            <Label Grid.Row="3" Grid.Column="1"
-               Text="A-Z a-z 0-9 _"/>
-        </Grid>
+                <!--    ４行目
+                        ======
+                -->
+                <Label Grid.Row="3" Grid.Column="0"
+                       Text="{Binding CharacterLength}"
+                       FontSize="24"/>
+                <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
+                       Text="全て半角 A-Z a-z 0-9 _ 両端を除き半角スペース"/>
+            </Grid>
+        </ScrollView>
 
         <Grid Grid.Row="1"
               Padding="8,8,8,8"
               BackgroundColor="SkyBlue">
             <Button HorizontalOptions="Center"
                 WidthRequest="300"
-                Text="新しく作る／続きから"/>
+                Text="続きから／次へ"/>
         </Grid>
     </Grid>
     
