--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -4,7 +4,8 @@
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="_2D_RPG_Negiramen.Views.Login1Page"
-             Title="Login1Page">
+             Title="Login1Page"
+             Loaded="ContentPage_Loaded">
 
     <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
