レイアウト

--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -62,7 +62,7 @@
     <Grid RowDefinitions="*,64">
         <ScrollView>
             <Grid Grid.Row="0"
-              RowDefinitions="20,48,20,48" ColumnDefinitions="1*,1*,2*"
+              RowDefinitions="20,48,*" ColumnDefinitions="1*,1*,2*"
               Padding="8,8,8,8">
 
                 <!--    １行目
@@ -103,23 +103,37 @@
                 <!--    ３行目
                         ======
                 -->
-                <!-- 「文字数」 -->
-                <Label Grid.Row="2" Grid.Column="0"
-                       Text="{app:Translate NumberOfCharacters}"/>
-                <!-- 「推奨する使う文字」 -->
-                <Label Grid.Row="2" Grid.Column="1"
-                       Text="{app:Translate RecommendedCharactersToUse}"/>
+                <HorizontalStackLayout Grid.Row="2"
+                                       Padding="40,8,8,8">
+                    <Grid RowDefinitions="32,20"
+                          Padding="0,0,0,16">
+                        <!-- 「文字数」 -->
+                        <Label Grid.Row="0"
+                               VerticalOptions="Center"
+                               VerticalTextAlignment="Center"
+                               HeightRequest="28"
+                               Text="{app:Translate NumberOfCharacters}"/>
 
-                <!--    ４行目
-                        ======
-                -->
-                <!-- 文字数 -->
-                <Label Grid.Row="3" Grid.Column="0"
-                       Text="{Binding NumberOfCharacters}"
-                       FontSize="24"/>
-                <!-- 「全て半角 A-Z a-z 0-9 _ 両端を除き半角スペース」 -->
-                <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
-                       Text="{app:Translate RecommendedCharactersToUseDescription}"/>
+                        <!-- 「推奨する使う文字」 -->
+                        <Label Grid.Row="1" 
+                               Text="{app:Translate RecommendedCharactersToUse}"/>
+                    </Grid>
+
+                    <Grid RowDefinitions="32,20"
+                          Padding="16,0,0,0">
+                        <!-- 文字数 -->
+                        <Label Grid.Row="0"
+                               VerticalOptions="Center"
+                               VerticalTextAlignment="Center"
+                               HeightRequest="28"
+                               FontSize="24"
+                               Text="{Binding NumberOfCharacters}"/>
+
+                        <!-- 「全て半角 A-Z a-z 0-9 _ 両端を除き半角スペース」 -->
+                        <Label Grid.Row="1"
+                               Text="{app:Translate RecommendedCharactersToUseDescription}"/>
+                    </Grid>
+                </HorizontalStackLayout>
             </Grid>
         </ScrollView>
 
